WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
52607
Some WebKit2 layout tests crash due to focus being on a frame in the page cache
https://bugs.webkit.org/show_bug.cgi?id=52607
Summary
Some WebKit2 layout tests crash due to focus being on a frame in the page cache
Maciej Stachowiak
Reported
2011-01-17 19:30:41 PST
Some WebKit2 layout tests crash due to focus being on a frame in the page cache
Attachments
Patch
(1.85 KB, patch)
2011-01-17 19:33 PST
,
Maciej Stachowiak
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Maciej Stachowiak
Comment 1
2011-01-17 19:33:25 PST
Created
attachment 79239
[details]
Patch
mitz
Comment 2
2011-01-17 19:41:09 PST
Comment on
attachment 79239
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=79239&action=review
I know that in single-frame pages we try to maintain the focused element upon navigation back to a cached page. Does this change affect this behavior? Does it already not work for pages with subframes?
> Source/WebCore/ChangeLog:15 > + goes in the page cache, rest focus to the main frame.
Typo: rest.
mitz
Comment 3
2011-01-17 19:47:49 PST
Comment on
attachment 79239
[details]
Patch WebKit is already failing to maintain focus in a subframe across navigation through the page cache, which is arguably a bug, but not something this patch changes, so r+
Maciej Stachowiak
Comment 4
2011-01-17 19:49:26 PST
Committed
r75994
: <
http://trac.webkit.org/changeset/75994
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug