third_party/WebKit/Source/WebCore/history/CachedFrame.cpp
@@ -31,6 +31,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "DocumentLoader.h"
 #include "ExceptionCode.h"
 #include "EventNames.h"
+#include "FocusController.h"
 #include "Frame.h"
 #include "FrameLoaderClient.h"
 #include "FrameView.h"
@@ -131,6 +132,9 @@ CachedFrame::CachedFrame(Frame* frame)
     ASSERT(m_document);
     ASSERT(m_documentLoader);
     ASSERT(m_view);
+
+    if (frame->page()->focusController()->focusedFrame() == frame)
+        frame->page()->focusController()->setFocusedFrame(frame->page()->mainFrame());
 
     // Active DOM objects must be suspended before we cached the frame script data
     m_document->suspendActiveDOMObjects(ActiveDOMObject::DocumentWillBecomeInactive);
